syntax = "proto3";

service UserService {
    rpc NewUser (NewUser) returns (User);
    rpc GetUserById(GetUserById) returns (User);
    rpc GetUserByUsernameOrEmail(GetUserByUsernameOrEmail) returns (User);
}

message NewUser {
  string username = 1;
  string password = 2;
  string email = 3;
}

message GetUserById {
  string id = 1;
}

message GetUserByUsernameOrEmail {
  string username = 1;
}

message User {
    string id = 1;
    int createdAt = 2;
    int updateAt = 3;
    string username = 4;
    string email = 5;
}